[package]
name = "eludrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
futures = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11.13", features = ["json"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
todel = { git = "https://github.com/eludris/eludris", branch = "next" }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.17.2", features = ["native-tls"] }
