[package]
name = "eludrs"
version = "0.3.3"
edition = "2021"
license = "MIT"
description = "A simple API wrapper for Eludris built on Tokio"
homepage = "https://github.com/eludris-community/eludrs"
repository = "https://github.com/eludris-community/eludrs"
readme = "README.md"
categories = [
	"api-bindings",
	"asynchronous",
	"web-programming",
	"web-programming::http-client",
	"web-programming::websocket",
]
keywords = ["eludris"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
futures = "0.3.25"
log = "0.4.17"
reqwest = { version = "0.11.13", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
todel = { version = "0.3.3", git = "https://github.com/eludris/eludris" }
tokio = { version = "1.21.2", features = ["rt-multi-thread", "macros", "time"] }
tokio-tungstenite = { version = "0.17.2", features = ["rustls-tls-webpki-roots"] }
